# wogd-juce-template

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLI-DEVELOPMENT.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GUI_TEMPLATE_CHECKLIST.md  MULTIFRAMEWORK.md  README.md  framework-templates.json  migrate-framework.ps1  project-config.json  quick-start.ps1  setup.ps1  template.code-workspace  wogd-juce-template.code-workspace
.github/workflows/: build.yml
.history/gui/src/: App_20251230110817.vue
.history/gui/src/services/: pluginService_20251230110849.ts
.history/gui/src/views/: PluginView_20251230110817.vue
.history/plugin/: CMakeLists_20251230110125.txt
.history/plugin/source/: PluginEditor_20251230110057.h  PluginEditor_20251230110125.cpp
cmake/: Assets.cmake  Benchmarks.cmake  CPM.cmake  GitHubENV.cmake  ProjectConfig.cmake  SharedCodeDefaults.cmake  Tests.cmake
gui/: package-lock.json
gui/.history/: package_20251230104440.json  package_20251230105011.json
gui/src/: App.vue
gui/src/components/plugin/: ParameterSlider.vue
gui/src/services/: pluginService.ts
gui/src/views/: PluginView.vue
plugin/: .gitignore  .gitmodules  BUILD_WITH_GUI.md  CMakeLists.txt  CMakePresets.json  README.md
plugin/.github/workflows/: build_and_test.yml
plugin/.history/: CMakeLists_20251230105011.txt
plugin/.history/cmake/: ProjectConfig_20251230104955.cmake
plugin/benchmarks/: Benchmarks.cpp  Catch2Main.cpp
plugin/cmake/: Assets.cmake  Benchmarks.cmake  EmbedGUI.cmake  GitHubENV.cmake  SharedCodeDefaults.cmake  Tests.cmake
plugin/docs/: WEBVIEW2_SETUP.md
plugin/source/: PluginEditor.cpp  PluginEditor.h
plugin/source/webview/: WebViewComponent.cpp  WebViewComponent.h
plugin/tests/: PluginBasics.cpp
plugin/tests/helpers/: test_helpers.h
